# storr

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  storr.toml
.github/: FUNDING.yml
src/: Lexer.cpp  Lexer.h  Token.cpp  Token.h  main.cpp  main.rs  main.storr  main.token
src/compiler/frontend/: Token.cpp  Token.h
src/storr/: ast.rs  lexer.rs  mod.rs  token.rs
